TAMAPI-2582 Changed gc options